--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body{
     color:blue
 }
+h1{
+    display: flex;
+    justify-self: center;
+}
+form{
+    display: flex;
+    justify-content: center;
+    flex-direction: row; 
+}
+
