--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body{
-    color:blue
+    background-color:green;
+    color: white;
+    height: 100%;
+}
+footer{
+    display: flex;
+    justify-content: center;
+    align-items:flex-end;
 }
